# BiohazardFS

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  desktop-release.yml  server-image.yml
apps/workspace-electron/: .prettierignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
apps/workspace-electron/src/: main.menu.ts  main.prefs.ts  main.ts  main.updates.ts  preload.ts
apps/workspace-electron/src/renderer/: globals.css  index.html  main.tsx
apps/workspace-electron/src/renderer/app/: nav.ts  root.tsx
apps/workspace-electron/src/renderer/app/__tests__/: root-onboarding.test.tsx
apps/workspace-electron/src/renderer/components/: app-sidebar.tsx  file-type-icon.tsx  logo.tsx  status-bar.tsx  studio-rail.tsx  sync-status.tsx  topbar.tsx  view-states.tsx  window-controls.tsx
apps/workspace-electron/src/renderer/components/onboarding/: onboarding.tsx
apps/workspace-electron/src/renderer/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  scroll-area.tsx  tooltip.tsx
apps/workspace-electron/src/renderer/components/views/: access-view.tsx  activity-view.tsx  audit-view.tsx  cache-view.tsx  conflicts-view.tsx  connection-view.tsx  files-view.tsx  locks-view.tsx  my-work-view.tsx  placeholder-view.tsx  settings-view.tsx  snapshots-view.tsx
apps/workspace-electron/src/renderer/lib/: daemon-capabilities.ts  daemon.ts  derive.ts  format.ts  use-daemon.ts  use-fetch.ts  use-prefs.ts  utils.ts
apps/workspace-electron/src/renderer/lib/__tests__/: daemon-capabilities.test.ts  daemon.test.ts
apps/workspace-electron/src/types/: preload.d.ts
crates/api-types/: Cargo.toml
crates/api-types/src/: known_methods.rs  lib.rs
crates/biohazardfs-api-types/: Cargo.toml
crates/biohazardfs-cli/: Cargo.toml
crates/biohazardfs-cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  config.rs  conflict.rs  error.rs  event.rs  grant.rs  id.rs  lib.rs  lock.rs  node.rs  operation.rs  org.rs  path.rs  snapshot.rs  version.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: backend.rs  event_stream.rs  lib.rs  main.rs  transport.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: lib.rs  main.rs  unix.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_baseline.sql  002_token_secret_hash_unique.sql  003_metadata_baseline.sql
crates/server/src/: lib.rs  main.rs
deploy/compose/dev/: docker-compose.yml
deploy/docker/server/: Dockerfile
deploy/helm/biohazardfs/: Chart.yaml  values.yaml
deploy/helm/biohazardfs/templates/: _helpers.tpl  deployment-api.yaml  deployment-worker.yaml  job-migrate.yaml  service.yaml
docs/: ARCHITECTURE.md  CI.md  COMMANDS.md  CONFIG.md  DAEMON_API.md  ROADMAP.md  SECURITY.md  SPEC.md  skills.md
docs/adr/: 0001-repository-layout.md
docs/architecture/: ARCHITECTURE.md  DAEMON_API.md  FILESYSTEM_SEMANTICS.md  METADATA_SCHEMA.md  SERVER_API.md  SERVER_ARCHITECTURE.md
docs/product/: DASHBOARD_UX.md  ROADMAP.md  SPEC.md
docs/reference/: CI.md  COMMANDS.md  CONFIG.md  INSTALLATION_AND_UPDATES.md  PACKAGING.md  SECURITY.md  SMOKE.md  skills.md
scripts/ci/: client-smoke.sh  fuse-smoke.sh  object-store-smoke.sh  server-db-smoke.sh  server-smoke.sh  server-transfer-smoke.sh  static-analysis.sh
scripts/release/: electron-builder.sh  prepare-desktop-resources.sh
skills/biohazardfs-admin-audit/: SKILL.md
skills/biohazardfs-shared/: SKILL.md
skills/biohazardfs-workspace/: SKILL.md
