[workspace]
members = [
  "crates/core",
  "crates/api-types",
  "crates/cli",
  "crates/daemon",
  "crates/fuse",
  "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
repository = "https://github.com/Biohazard-VFX/BiohazardFS"
homepage = "https://github.com/Biohazard-VFX/BiohazardFS"
authors = ["Biohazard VFX"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
