[package]
name = "biohazardfs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "biohazardfs"
path = "src/main.rs"

[dependencies]
biohazardfs-api-types = { path = "../api-types" }
biohazardfs-core = { path = "../core" }
biohazardfs-daemon = { path = "../daemon" }
clap.workspace = true
serde_json.workspace = true
sha2 = "0.11"
