[package]
name = "biohazardfs-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "biohazardfsd"
path = "src/main.rs"

[dependencies]
biohazardfs-api-types = { path = "../api-types" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
