[package]
name = "biohazardfs-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "biohazardfsd"
path = "src/main.rs"

[dependencies]
biohazardfs-api-types = { path = "../api-types" }
biohazardfs-core = { path = "../core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
# `time` is already a workspace dep (used by api-types for RFC3339 timestamps) and
# already in Cargo.lock; the daemon uses it only for operation-token expiry math.
time.workspace = true
