[package]
name = "biohazardfs-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"
libc = "0.2"
