[package]
name = "biohazardfs-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
biohazardfs-api-types = { path = "../api-types" }
biohazardfs-core = { path = "../core" }
biohazardfs-daemon = { path = "../daemon" }
clap.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"
libc = "0.2"
