[package]
name = "biohazardfs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "biohazardfs-server"
path = "src/main.rs"

[dependencies]
biohazardfs-api-types = { path = "../api-types" }
biohazardfs-core = { path = "../core" }
clap.workspace = true
postgres = "0.19"
serde.workspace = true
serde_json.workspace = true
